# new-bot

./: .gitignore  CHANGELOG.md  api_notes.html  claude_code_notes.html  news.html  release_notes.html  snippet_2185.txt
binance bot/: README.md  config.yaml  main.py  pyproject.toml
binance bot/data/: state_ETHUSDT.json
binance bot/src/: backtest.py  bot.py  config.py  main.py  models.py  optimization.py  orchestrator.py
binance bot/src/core/: account_risk.py  fair_value.py  kelly_sizing.py  portfolio_risk.py  quote_engine.py
binance bot/src/gateways/: bybit_futures_data.py  bybit_futures_execution.py  polymarket_data.py  polymarket_execution.py
binance bot/src/notifications/: telegram.py
binance bot/src/state/: order_manager.py  persistency.py
binance bot/src/strategy/: breakout_engine.py  funding_rate_engine.py  indicator_engine.py  mean_reversion_engine.py  signal_aggregator.py  trend_following_engine.py
binance bot/tests/: test_full_suite.py  test_quote_engine.py  test_risk_engine.py
loky bot/: .dockerignore  .env  .env.example  Dockerfile  QUICKSTART.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  run_backtest.py
loky bot/data/: state_BTCUSDT.json  state_MARKET-A.json
loky bot/src/: backtest.py  backtest_advanced.py  bot.py  config.py  logging_setup.py  main.py  models.py  optimization.py  orchestrator.py
loky bot/src/api/: server.py
loky bot/src/core/: account_risk.py  kelly_sizing.py  liquidation_monitor.py  portfolio_risk.py  risk_engine.py
loky bot/tests/: test_full_suite.py  test_loky.py  test_order_manager.py
(+24 files in other folders)
